# CO2Sensor

./: .gitignore  README.md
CO2Firmware/src/: main.cpp
CO2Server/: CMakeLists.txt  Server.cpp
CO2Server/Source/: main.cpp
Dashboard/: CMakeLists.txt
Dashboard/Dependencies/serial/: CMakeLists.txt
Dashboard/Source/: Backend.cpp  Backend.cpp.autosave  Backend.hpp  ReadingType.hpp  main.cpp
Dashboard/Source/Server/: SerialHandler.cpp  SerialHandler.hpp  SerialHandler.hpp.autosave  Server.cpp  Server.hpp
Dashboard/Source/Server/DataProcessing/: DataParser.cpp  DataParser.hpp  DataSaver.cpp  DataSaver.hpp  GraphDataProcessor.cpp  GraphDataProcessor.hpp  Parser.cpp  Parser.hpp
Dashboard/Source/Utilities/: CVQueue.hpp  RangesHelper.cpp  RangesHelper.hpp  RunningAvgHelper.hpp  Utilities.cpp  Utilities.hpp
Dashboard/UI/: ButtonsRow.qml  DashboardCard.qml  GraphCard.qml  Main.qml  SensorConfigPopup.qml  StyledButton.qml
Dashboard/UI/DashboardElements/: ConcentrationRangesCard.qml  CurrentDataCard.qml  RangeCard.qml
Dashboard/UI/GraphElements/: CalendarPopup.qml  PeriodSelectRow.qml  RadioButtonsRow.qml  ReadingSelectRow.qml  ReadingsGraph.qml  StyledRadioButton.qml
Firmware/: platformio.ini
Firmware/src/: Config.cpp  Config.hpp  DataSaver.cpp  DataSaver.hpp  Debug.hpp  Display.cpp  Display.hpp  main.cpp
Firmware/src/Network/: Connection.cpp  Connection.hpp  NetworkTask.cpp  NetworkTask.hpp
Firmware/src/Sensor/: Sensor.cpp  Sensor.hpp
Firmware/src/Utilities/: CircularBuffer.hpp  Debug.hpp  RunningAvgHelper.hpp
PC/: CMakeLists.txt  Server.hpp
PC/Source/: Backend.cpp  Backend.hpp  DataHandler.cpp  DataHandler.hpp  RangesHelper.cpp  Server.cpp  Server.hpp  main.cpp
PC/Source/Server/: Server.cpp  Server.hpp
PC/Source/Server/Data/: DataParser.hpp  DataSaver.cpp  DataSaver.hpp
PC/Source/Utilities/: RunningAvgHelper.hpp  Utilities.cpp  Utilities.hpp
Protocol/: Protocol.hpp
